--- a/VTUF-3DDesign.tex
+++ b/VTUF-3DDesign.tex
@@ -650,13 +650,6 @@ In the \cite{Coutts2015} observations for this modelled period, the open canyon 
 
 \subsubsection{George/Gipps St. evaluation results}
 
-%I found there was not a clear message/story in this section here. Was  wordy.
-%
-%Suggested order of what to say:
-%-- Gipps St results follow closely, as clear open street with few obstructions, though model is slow to warm. 
-%-- Slow to warm because of what is modeled. Surfaces, not 4 m, so shading present in model. Slight underestimation from Eq. 6 for globe temp (though this the equation for a globe, so technically shouldn't occur - see comment later)
-%-- George St results. Should follow simil patterns but don't expect them to be identical, because the resolution of the model is 5m and the observations represent a point in space. Slight differences in timing of shading between obs and mod will lead to large differences in the comparions.
-%-- George St follows similar patterns nonetheless.
 
 The two scenarios GeorgeValidation and GippsValidation were completed for the February 2012 modelling period. Modelled predictions for the George St. observation locations (TRD\_2, TRD\_3, TRD\_4, and TRD\_5) and Gipps St. observation locations (OPN\_3, OPN\_4, and OPN\_5) were extracted from the results and compared to the observations for those locations. Statistical analysis (RMSE, MBE, MAE, and d index of agreement) for these four and three locations for $T_{mrt}$ and UTCI are summarised in Table \ref{tab:georgetmrt}.
 
@@ -689,8 +682,6 @@ OPN\_5 &{$T_{mrt}$}  & 5.82 & -1.12 & 3.52 & 0.961& {UTCI}  & 2.45 & -1.15 & 2.0
 \end{center} 
 
 
-The model shows reasonably good performance in this spatial point by point comparison. $T_{mrt}$ $RMSE$ values from George St. range from 5.48 to 7.94\SI{}{\degreeCelsius}, $T_{mrt}$ $MBE$ values from 0.24 to -4.29\SI{}{\degreeCelsius}, $T_{mrt}$ $MAE$ values from 3.58 to 5.05\SI{}{\degreeCelsius}, and $d$ index of agreement values range from 0.913 to 0.939. UTCI $RMSE$ values range from 2.74 to 3.02\SI{}{\degreeCelsius}, $T_{mrt}$ $UTCI$ values -1.58 to -2.93\SI{}{\degreeCelsius}, and $d$ index of agreement values range from 0.914 to 0.953.  Gipps St. shows similar results, with $T_{mrt}$ $RMSE$ values ranging from 5.82 to 6.11\SI{}{\degreeCelsius}, $T_{mrt}$ $MBE$ values from -0.28 to -1.12\SI{}{\degreeCelsius}, , $T_{mrt}$ $MAE$ values from 3.52 to 3.90\SI{}{\degreeCelsius} and $d$ index of agreement values range from 0.959 to 0.961. UTCI $RMSE$ values range from 2.33 to 2.45\SI{}{\degreeCelsius}, $T_{mrt}$ $UTCI$ values from -0.98 to -1.15\SI{}{\degreeCelsius}, and $d$ index of agreement values range from 0.965 to 0.971.
-
 To examine the variations between the different observation points, the three locations for Gipps St. (OPN\_3, OPN\_4, and OPN\_5) were aggregated into hourly averages over 30 days and compared to the same aggregation of the modelled results. A similar analysis was performed for modelled and observed UTCI for Gipps St. Finally, both analyses were repeated for the four locations of George St. (TRD\_2, TRD\_3, TRD\_4, and TRD\_5). The results for all of these are presented in Figure \ref{fig:GippsStUTCI30Compare}
 
 \begin{figure}[!htbp]
@@ -698,21 +689,47 @@ To examine the variations between the different observation points, the three lo
 \caption{Gipps St. GippValidation scenario three observation stations (OPN\_3, OPN\_4, and OPN\_5) values of $T_{mrt}$ and UTCI aggregated into hourly averages over 30 days compared to modelled points, with error bars at observation standard deviations. George St. GeorgeValidation scenario four observation stations (TRD\_2, TRD\_3, TRD\_4, and TRD\_5) values of $T_{mrt}$ and UTCI aggregated into hourly averages over 30 days compared to modelled points, with error bars at observation standard deviations \label{fig:GippsSt30Compare}\label{fig:GippsStUTCI30Compare}\label{fig:GeorgeSt30Compare}}
 \end{figure} 
  
+%The model shows reasonably good performance in this spatial point by point comparison. $T_{mrt}$ $RMSE$ values from George St. range from 5.48 to 7.94\SI{}{\degreeCelsius}, $T_{mrt}$ $MBE$ values from 0.24 to -4.29\SI{}{\degreeCelsius}, $T_{mrt}$ $MAE$ values from 3.58 to 5.05\SI{}{\degreeCelsius}, and $d$ index of agreement values range from 0.913 to 0.939. UTCI $RMSE$ values range from 2.74 to 3.02\SI{}{\degreeCelsius}, $T_{mrt}$ $UTCI$ values -1.58 to -2.93\SI{}{\degreeCelsius}, and $d$ index of agreement values range from 0.914 to 0.953.  Gipps St. shows similar results, with $T_{mrt}$ $RMSE$ values ranging from 5.82 to 6.11\SI{}{\degreeCelsius}, $T_{mrt}$ $MBE$ values from -0.28 to -1.12\SI{}{\degreeCelsius}, , $T_{mrt}$ $MAE$ values from 3.52 to 3.90\SI{}{\degreeCelsius} and $d$ index of agreement values range from 0.959 to 0.961. UTCI $RMSE$ values range from 2.33 to 2.45\SI{}{\degreeCelsius}, $T_{mrt}$ $UTCI$ values from -0.98 to -1.15\SI{}{\degreeCelsius}, and $d$ index of agreement values range from 0.965 to 0.971.
+ 
+
+%I found there was not a clear message/story in this section here. Was wordy.
+%
+%Suggested order of what to say:
+%-- Gipps St results follow closely, as clear open street with few obstructions, though model is slow to warm. 
+%-- Slow to warm because of what is modeled. Surfaces, not 4 m, so shading present in model. Slight underestimation from Eq. 6 for globe temp (though this the equation for a globe, so technically shouldn't occur - see comment later)
+%-- George St results. Should follow simil patterns but don't expect them to be identical, because the resolution of the model is 5m and the observations represent a point in space. Slight differences in timing of shading between obs and mod will lead to large differences in the comparions.
+%-- George St follows similar patterns nonetheless.
+
+The modelled results of $T_{mrt}$ for Gipps St., a clear open street with few obstructions, follow closely to the observed values for the three point locations. Variations from the diurnal trends in the observations are seen in a slower warming of the model during the mornings. Very similar patterns are seen in the Gipps St. modelled diurnal trends of UTCI, of which $T_{mrt}$ is a main driver.
 
 
-The modelled results reproduce the close agreement between the three locations in the open canyon of Gipps St. Variations from the diurnal trends in the observations are seen in slightly slower warming during the mornings but then coming into good agreement at the afternoon peak and throughout the rest of the day and night into the next morning. Very similar patterns are seen in the diurnal trends of UTCI, of which $T_{mrt}$ is the main driver, showing slower warming during the mornings. However, lower modelled UTCI values during the night-time would suggest there is some room for improvement in modelling wind speed or relative humidity, as modelled values of air temperature and $T_{mrt}$ tend to be slightly high and could not be the source of these lower calculated values.
 
-In the treed canyon, George St., the model shows some of the same variation in $T_{mrt}$ between modelled locations seen in the observations. Modelled values of TRD\_4 do reproduce the slower warming trends in the mornings seen in the observations (but diverge in the late mornings). However, the stronger warming of TRD\_4 seen in the observations is not completely captured by the model. In variations from the observed diurnal trends, the modelling results reproduce well the trends from late afternoon, over night, and into early mornings. The main variability during the mornings do not show the wide ranges seen in the observations but follow a more average range between those wider ranges. 
+%The modelled results reproduce the close agreement between the three locations in the open canyon of Gipps St. Variations from the diurnal trends in the observations are seen in slightly slower warming during the mornings but then coming into good agreement at the afternoon peak and throughout the rest of the day and night into the next morning. Very similar patterns are seen in the diurnal trends of UTCI, of which $T_{mrt}$ is the main driver, showing slower warming during the mornings. However, lower modelled UTCI values during the night-time would suggest there is some room for improvement in modelling wind speed or relative humidity, as modelled values of air temperature and $T_{mrt}$ tend to be slightly high and could not be the source of these lower calculated values.
 
-There are a number of differences in the way $T_{g}$ (and its use in calculating $T_{mrt}$) (see Section \ref{sec:tmrtutci}) is calculated compared to the observed values, which could explain some of the divergences. First, the modelled results are calculated for each surface in the domain (and only for surfaces in the domain). As there are no surfaces at the locations at which the observations were taken (3.5 to 4m above the ground), the comparisons of $T_{mrt}$ needed to be performed on the modelled results at a 0m height underneath the observation locations. This would lead to lower amounts of $K\downarrow$ reaching the ground due to reduced sky view factors deeper into the urban canyon, especially in the mornings when much of the canyon floor will be in shadow due to lower sun angles.
 
-A second important difference is due to the limitation of domains created using flat cubic surfaces. The globe thermometer in the observation would have been exposed to radiation from all side angles in addition to up and down. As flat surfaces, the modelled points will see a reduction in received shortwave compared to the globes used in the observations, especially in the mornings. 
+There are a number of differences in the way $T_{g}$ (and its use in calculating $T_{mrt}$) (see Section \ref{sec:tmrtutci} and Eq. \ref{eq:tg2}) is calculated compared to the observed values that could explain some of the divergences. The modelled results are calculated for each surface in the domain (and only for surfaces in the domain). As there are no surfaces at the locations at which the observations were taken (3.5 to 4m above the ground), the comparisons of $T_{mrt}$ needed to be performed on the modelled results at a 0m height underneath the observation locations. These modelled ground surfaces will have received reduced amounts of $K\downarrow$ due to a reduced sky view factor and shading effects, especially in the mornings when much of the canyon floor will be in shadow due to lower sun angles.
+
+%A second important difference is due to the limitation of domains created using flat cubic surfaces. The globe thermometer in the observations would have been exposed to radiation from all side angles in addition to up and down. 
+
+%As flat surfaces, the modelled points will see a reduction in received shortwave compared to the globes used in the observations, especially in the mornings. 
 
 % % % I kind of see what you mean with this but it's not clear. Not really sure what you're getting at. A wall is a flat surface. Are you just meaning ground surfaces are shaded in the morning? This was not seen in Gipps street because it is an open E-W canyon. 
 
-A comparison of modelled $T_{can}$ from scenarios GeorgeValidation and GippValidation to observed $T_{a}$ of George St. 4 treed canopy stations and Gipps St. 3 open canopy stations is shown in Figure \ref{fig:GeorgeGippsStTcanCompare}. Values from both data sets are aggregated into hourly averages over the modelled period. 
 
-A direct comparison of these two data sets is difficult as the modelled $T_{can}$ values are averages of the entire urban canopy air space while the seven observation stations record the air temperatures at 3.5 to 4m height for each specific location. However, the modelled $T_{can}$ of the open canopy street (Gipps St.) shows peak values approximately 1\SI{}{\degreeCelsius} warmer (as well as being overall warmer throughout daylight hours) than the treed street (George St.). This result is comparable to the \cite{Coutts2015} observations and shows the model is able to capture relative cooling effects of increased canopy cover in air temperature predictions.
+Modelled results of $T_{mrt}$ and UTCI in George St. the treed canyon, follow similar patterns to Gipps St. The observations show wide variations between the observation locations due the intermittent shading effect through a denser canopy as the sun moves across the sky. The modelled results also show these variations between the locations but do not reproduce as wide a range as well as differences in timing of periods of shading and illumination seen in the observations. In this, some limitations are seen in the scenarios' resolutions, of 5 meters, as small differences in timing can lead to large differences in the comparisons. However, even at this relatively coarse resolution, VTUF-3D is still able to produce good results within a complex canopy. 
+
+These conclusions are further supported by the statistical analysis of predicted vs. observed results in Table \ref{tab:georgetmrt}. Performance of d index of agreement for $T_{mrt}$ and UTCI for the more complex treed canyon show good agreement, with even stronger agreement in the open Gipps St. canyon. In the other statistics (RMSE, MBE, and MAE), the results in the treed canyon also show good agreement with even stronger agreement in the open canyon.
+
+%In the treed canyon, George St., the modelled results show similar patterns of $T_{mrt}$ in comparison to the observed values. In the treed canyon, George St., the modelled results shows some of the same variation in $T_{mrt}$ between modelled locations seen in the observations. Modelled values of TRD\_4 do reproduce the slower warming trends in the mornings seen in the observations (but diverge in the late mornings). However, the stronger warming of TRD\_4 seen in the observations is not completely captured by the model. In variations from the observed diurnal trends, the modelling results reproduce well the trends from late afternoon, over night, and into early mornings. The main variability during the mornings do not show the wide ranges seen in the observations but follow a more average range between those wider ranges. 
+
+
+
+
+
+
+A comparison of modelled $T_{can}$ from scenarios GeorgeValidation and GippValidation to observed $T_{a}$ of George St. 4 treed canopy stations and Gipps St. 3 open canopy stations is shown in Figure \ref{fig:GeorgeGippsStTcanCompare}. Values from both data sets are aggregated into hourly averages over the modelled period. A direct comparison of these two data sets is difficult as the modelled $T_{can}$ values are averages of the entire urban canopy air space while the seven observation stations record the air temperatures at 3.5 to 4m height for each specific location. 
+
+The modelled $T_{can}$ of the open canopy street (Gipps St.) shows peak values approximately 1\SI{}{\degreeCelsius} warmer (as well as being overall warmer throughout daylight hours) than the treed street (George St.). Due to the difficulty in exact comparisons between averaged modelled street canyon air temperature and the point locations of the observations within the street canyon, the model over-estimates the air temperatures of each canyon as well as the relative difference between the two (2\SI{}{\degreeCelsius} modelled vs. 1\SI{}{\degreeCelsius} in the observations). However, the result does show that VTUF-3D can capture some of the relative cooling effects of increased canopy cover in air temperature predictions as seen in the \cite{Coutts2015} observations.
 
 % % %In what way? variations in temperatures between stations? model obs are 2 degrees warmer
 
