Change format of some of the documents

--- a/VTUF-3DDesignTitlePage.tex
+++ b/VTUF-3DDesignTitlePage.tex
@@ -88,19 +88,18 @@
 %% \address{Address\fnref{label3}}
 %% \fntext[label3]{}
 
-\title{Development of the VTUF-3D v1.0 urban micro-climate model to support assessments of urban vegetation influences on HTC}
+\title{Development of the VTUF-3D v1.0 urban micro-climate model to support assessment of urban vegetation influences on human thermal comfort}
 
 
 %% use optional labels to link authors explicitly to addresses:
-\author[monash,crc]{Kerry~A~Nice\corref{cor1}}
+\author[monash,melb,crc]{Kerry~A.~Nice\corref{cor1}}
 \ead{mothlight@fastmail.fm}
-\author[monash,crc]{Andrew Coutts}
-\author[monash,crc]{Nigel~Tapper}
+\author[monash,crc]{Andrew~M.~Coutts}
+\author[monash,crc]{Nigel~J.~Tapper}
 \cortext[cor1]{Principal corresponding author}
-\address[monash]{School of Earth, Atmosphere and Environment, Monash University, Clayton, VIC 3800, Australia}
+\address[monash]{School of Earth, Atmosphere and Environment, Monash University, Clayton, Victoria 3800, Australia}
+\address[melb]{Transport, Health, and Urban Design Hub, Faculty of Architecture, Building, and Planning, University of Melbourne, Victoria 3010, Australia}
 \address[crc]{Cooperative Research Centre for Water Sensitive Cities, Melbourne, Australia}
-
-
 
 
 
